// --- [Start] END1001U02 ---

syntax = "proto2";

//1. dsvDw.QuerySQL
message END1001U02DsvDwRequest
{
	optional string fkocs               = 1;
	optional string hosp_code           = 2;
}

message END1001U02DsvDwResponse
{
	repeated END1001U02DsvDwInfo dsv_dw_item = 1;
}


//2. dsvLDOCS0801.QuerySQL
message END1001U02DsvLDOCS0801Request
{
	optional string hangmog_code              = 1;
	optional string hosp_code                 = 2;
}

message END1001U02DsvLDOCS0801Response
{
	repeated END1001U02DsvLDOCS0801Info dsv_ldocs_0801_item = 1;
}


//3. grdComment3.QuerySQL
message END1001U02GrdComment3Request
{                                                
	optional string hosp_code                     = 1;
	optional string bunho                         = 2;
	optional string order_date                    = 3;

}

message END1001U02GrdComment3Response
{
	repeated END1001U02GrdComment3Info grd_comment3_item = 1;
}

//4. grdPaStatus.QuerySQL
message END1001U02GrdPaStatusRequest
{                                                
	optional string bunho                       = 1;
	optional string hosp_code                   = 2;
	optional string hangmog_code                = 3;
}

message END1001U02GrdPaStatusResponse
{
	repeated END1001U02GrdPaStatusInfo grd_pastatus_item = 1;
}

//5. grdPurpose.QuerySQL
message END1001U02GrdPurposeRequest
{                                                
	optional string hosp_code                       = 1;
}

message END1001U02GrdPurposeResponse
{
	repeated END1001U02GrdPurposeInfo grd_purpose_item = 1;
}

//6. layOrderDate.QuerySQL
message END1001U02LayOrderDateRequest
{                                                
	optional string hosp_code                       = 1;
	optional string bunho                       	= 2;
}

message END1001U02LayOrderDateResponse
{
	repeated END1001U02LayOrderDateInfo lay_order_date_item = 1;
}


//7. Merger Message
message END1001U02UpdateMerGrdRequest 
{
	repeated END1001U02DsvDwInfo           end_1001u02_dsvdw_obj        	= 1;
	repeated END1001U02GrdPaStatusInfo     end_1001u02_grdpa_status_obj     = 2;
	optional string upd_id                        							= 3;
	optional string resident_yn                   							= 4;
	optional string hosp_code                     							= 5;
}